Correccion de expediente